--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,8 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+@layer base {
+  .nav-item {
+    @apply px-4 py-1.5 rounded-full text-white text-sm font-semibold
+  }
+}
